Showcase fixes some sizing/spacing on some of the different endpoints

--- a/widgets/showcase/src/styles/components/RideStylerShowcasePaginationComponent.scss
+++ b/widgets/showcase/src/styles/components/RideStylerShowcasePaginationComponent.scss
@@ -6,9 +6,8 @@
         cursor: default;
         display: flex;
         align-items: center;
-        content-align: center;
         text-align: center;
-        justify-content: space-between;
+        justify-content: space-around;
         width: 100%;
 
         white-space: nowrap;
