--- a/widgets/showcase/src/styles/responsive/phone-landscape/_vehicle-visualization.scss
+++ b/widgets/showcase/src/styles/responsive/phone-landscape/_vehicle-visualization.scss
@@ -4,6 +4,7 @@
 .ridestyler-showcase-viewport {
     right: 15%;
     height: 45%;
+    bottom: 35%;
     pointer-events: none;
     z-index: $zLayer1;
 }
