--- a/widgets/showcase/src/styles/responsive/phone-portrait/_pagination.scss
+++ b/widgets/showcase/src/styles/responsive/phone-portrait/_pagination.scss
@@ -26,17 +26,3 @@
         }
     }
 }
-
-// Prevents image from overlapping text while allowing fullscreen selection for mobile landscape - iPhone 5 / iPhone X
-@media only screen and (max-width: 411px) {
-   .ridestyler-showcase-pagination {
-       &-wrapper {
-        justify-content: flex-start;
-       }
-       &-option {
-        margin-right: 1.25em;
-        min-width: 9em;
-       }
-   }
-}
-
